[gd_scene load_steps=4 format=3 uid="uid://bv2uwe7ikgiij"]

[ext_resource type="Script" uid="uid://dsglp3cygv2vg" path="res://scenes/Pipes/Pipes.gd" id="1_ky5lf"]
[ext_resource type="PackedScene" uid="uid://cutiutt1mkitu" path="res://scenes/Laser/Laser.tscn" id="1_r37jk"]
[ext_resource type="PackedScene" uid="uid://ljx7e131qsj3" path="res://scenes/Pipe/Area2d.tscn" id="2_ky5lf"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_ky5lf")

[node name="Laser" parent="." instance=ExtResource("1_r37jk")]

[node name="Lower" parent="." instance=ExtResource("2_ky5lf")]
position = Vector2(0, 90)

[node name="Upper" parent="." instance=ExtResource("2_ky5lf")]
position = Vector2(0, -90)
rotation = 3.1415927

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(202, 1)

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
